# screen-config-watcher

./: .gitignore  LICENSE  README.md  config.toml.sample  pyproject.toml  requirements.txt
scw/: config.py  config_file_watcher.py  log.py  options.py  watcher_app.py
scw/cli/: __init__.py  screen_config_watcher.py
scw/samples/macOS - autostart/: README.md  de.yobasoft.screen-config-watcher.plist
scw/screen_change/: windows.py
scw/screen_lock/: macos.py
