[project]
name = "screen-config-watcher"
version = "0.0.3"
authors = [
    { name = "Dennis Sitelew", email = "yowidin@gmail.com" },
]
description = "A tool to watch OS screen configuration changes and change the OBS profile and scene collection accordingly."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies"]

[project.scripts]
screen-config-watcher = "scw.cli:run_watcher"

[project.urls]
homepage = "https://github.com/yowidin/screen-config-watcher"
bugtrack = "https://github.com/yowidin/screen-config-watcher/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
